# rafiikka

./: KarttaControlRotateLeft.js  KarttaControlRotateRight.js  LICENSE  README.md  Rafiikka.cabal  aikataulut.js  all.js  all.min.js  cabal.project.local  chart.js  datefns.js  drag.js  ennakkotiedot.js  entry.js  figlet  haku.js  index-debug.html  index-dev.html  index.html  infra.js  infraData.js  jsaddle-orig.js  jsaddle-original.js  junat.js  kartta.js  karttaLayers.js  karttaStyles.js  last.js  lista.js  muutokset.js  pack.sh  popup.js  raide.js  ratatyot.js  shell.nix  spatial.js  state.js  style.css  tilastot.js  tooltip.js  (+2 more)
lib/: datefns.js  ol-layerswitcher.css  pack.sh
nix/: base.nix
src/: Browser.hs  FFI.hs  Fetch.hs  Frontpage.hs  GetSet.hs  Main.hs  Match.hs  Monadic.hs  MutationObserver.hs  Search.hs  State.hs  StateAccessor.hs  TestUtils.hs  Time.hs  Tippy.hs  Tooltips.hs  Types.hs  URI.hs  URISerialization.hs  Yleiset.hs
src/Amcharts/: Adapter.hs  Amcharts.hs  DataSource.hs  Events.hs
src/Browser/: Browser.hs  Drag.hs  Events.hs  Fetch.hs  MutationObserver.hs  Popup.hs  Tippy.hs  Tooltips.hs
src/Infra/: DataSource.hs  Types.hs
src/Jeti/: DataSource.hs  Types.hs
src/Ruma/: Types.hs
src/Trex/: Types.hs
tests/: doctest.hs
