cabal-version:       2.4
build-type:          Custom
name:                Rafiikka
version:             0.1.0.0

custom-setup
 setup-depends:
   base,
   Cabal,
   cabal-doctest

executable Rafiikka
  main-is:             Main.hs
  build-depends:       base
   , universum
   , Shpadoinkle
   , Shpadoinkle-backend-snabbdom
   , Shpadoinkle-backend-pardiff
   , Shpadoinkle-html
   , Shpadoinkle-console
   , jsaddle
   , jsaddle-dom
   , text
   , bytestring
   , aeson
   , lens
   , time
   , extra
   , megaparsec
   , generic-lens
   , cabal-doctest
   , modern-uri
   , control-bool
   , time-lens
   , regex
   , data-foldapp
  
  if impl(ghcjs)
    build-depends: ghcjs-base

  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions: NoImplicitPrelude, OverloadedStrings, TypeFamilies

  other-modules: FFI
               , Browser.Tooltips
               , Browser.MutationObserver
               , Browser.Tippy
               , Browser.Browser
               , Browser.Fetch
               , Frontpage
               , Yleiset
               , Time
               , State
               , StateAccessor
               , URISerialization
               , Monadic
               , URI
               , Types
               , Match
               , Amcharts.DataSource
               , Amcharts.Events
               , Infra.Types
               , Jeti.Types
               , Ruma.Types
               , Trex.Types

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities

  ghcjs-options:
    -Wall
    -Werror
    -Wcompat
    -fno-warn-missing-home-modules
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
    -O2

if impl(ghc)
  Test-Suite doctests
    type:          exitcode-stdio-1.0
    ghc-options:   -threaded
    main-is:          doctest.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends: base, universum, doctest, QuickCheck
    default-extensions: NoImplicitPrelude, OverloadedStrings, TypeFamilies

